[gd_scene load_steps=2 format=3 uid="uid://planning_hud"]

[ext_resource type="Script" path="res://scripts/ui/planning_hud.gd" id="1_script"]

[node name="PlanningHUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="PhaseLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1
text = "PLANNING"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Start Blackout [Space]"

[node name="AddLegButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 0
text = "Add Leg (Relay)"

[node name="TaskPanel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 400.0
grow_horizontal = 0

[node name="TaskList" type="VBoxContainer" parent="TaskPanel"]
layout_mode = 2
